--- a/index1.html
+++ b/index1.html
@@ -278,8 +278,8 @@ button:hover {
             <li><a href="#">Page 1</a></li>
             <li><a href="#">Page 2</a></li>
           </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <h5 style="color: white;" >Already have an account?</h5>
+          <ul style="margin-left: 10rem;" class="nav navbar-nav navbar-right">
+            
             <li> <a type="button" class="btn btn-default btn-lg" id="myBtn1" href="#"
                  data-toggle="tooltip" title="Already have an account? Login here!">
                 <span class="glyphicon glyphicon-log-in"></span> Login </a>
