--- a/view.html
+++ b/view.html
@@ -458,13 +458,16 @@ a {
 
   <div class="navbar">
 
-    <a  data-toggle="tooltip" title="Go to home" class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a>
+    <a  data-toggle="tooltip" title="Go to home" class="active" href="#">
+      <i class="fa fa-fw fa-home"></i> Home</a>
     <a href="#"><i class="fa fa-fw fa-search"></i> Search</a>
     <!-- <a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a> -->
-    <a data-toggle="tooltip" title="Need help? we got you covered.." href="#"><i class="fa fa-fw fa-user"></i> Help </a>
+    <a data-toggle="tooltip" title="Need help? we got you covered.." href="#">
+      <i class="fa fa-fw fa-user"></i> Help </a>
     <ul class="nav  navbar-right">
         <li><a data-toggle="tooltip" title="Change and modify your profile!" href="#"><i class="glyphicon glyphicon-user"></i> Account</a></li>
-        <li><a data-toggle="tooltip" title="Check out your cart" href="#"><i class="glyphicon glyphicon-shopping-cart"></i> Cart</a></li>
+        <li><a data-toggle="tooltip" title="Check out your cart" href="#">
+          <i class="glyphicon glyphicon-shopping-cart"></i> Cart</a></li>
       </ul>
   </div>
   
@@ -485,7 +488,8 @@ a {
         <a data-toggle="tooltip" title="view different genres of books" href="#home">My Library</a>
         <a data-toggle="tooltip" title="see your personal library" href="#news">Galery</a>
         <a data-toggle="tooltip" title="see what you most prefer" href="#contact">Favourites</a>
-        <a data-toggle="tooltip" title="read books offline" href="#contact">Offline Books</a>
+        <a data-toggle="tooltip" title="read books offline" href="#contact">
+          Offline Books</a>
         <a href="#about">Settings</a>
 
       </div>
@@ -493,7 +497,8 @@ a {
     300px; " src="./subs/e3.jpg" alt="Snow">
 
 <div class="proj" >
-    <h2 style="color: rgb(235, 20, 20); text-decoration: double; " > Share this reading experience with us </h2>
+    <h2 style="color: rgb(235, 20, 20); text-decoration: double; " > 
+      Share this reading experience with us </h2>
 </div>
 
     <button><a type="button" href="index1.html" class="button">Read</a></button>
